Updates to java 16 and adds failing test.